--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,11 +5,25 @@
     android:background="@drawable/bg_gradient"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+
     <ImageView
-        android:layout_width="160dp"
-        android:layout_height="82dp"
+        android:layout_width="395dp"
+        android:layout_height="195dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-2dp"
+        android:layout_marginLeft="-2dp"
+        android:layout_marginTop="-2dp"
+        android:background="@drawable/kz"
         android:minWidth="0dp"
-        android:minHeight="0dp"
-        android:background="@drawable/echo_logo"
-        android:layout_centerInParent="true"/>
+        android:minHeight="0dp" />
+
+    <ImageView
+        android:layout_width="81dp"
+        android:layout_height="81dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/l"
+        android:minWidth="0dp"
+        android:minHeight="0dp" />
 </RelativeLayout>
