--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -21,7 +21,7 @@
         android:paddingLeft="2dp"
         android:paddingRight="2dp"
         android:paddingTop="6dp"
-        android:text="This Application has been developed by Ashish Aryan"
+        android:text=" version  1"
         android:textColor="#212121"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -29,36 +29,35 @@
 
     <ImageView
         android:id="@+id/info_icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
         android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
         android:layout_marginLeft="12dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="12dp"
-        android:src="@drawable/info"
+        android:minWidth="300dp"
         android:minHeight="150dp"
-        android:minWidth="300dp"/>
+        android:src="@drawable/me" />
 
     <TextView
+        android:id="@+id/appVersion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/info_icon"
-        android:id="@+id/appVersion"
+        android:layout_centerInParent="true"
         android:layout_marginLeft="6dp"
+        android:layout_marginTop="67dp"
         android:layout_marginRight="6dp"
         android:layout_marginBottom="6dp"
-        android:layout_centerInParent="true"
-        android:paddingBottom="2dp"
         android:paddingLeft="2dp"
-        android:paddingRight="2dp"
         android:paddingTop="6dp"
+        android:paddingRight="2dp"
+        android:paddingBottom="2dp"
         android:text="App version : 1.0"
+        android:textAlignment="center"
         android:textColor="#212121"
         android:textSize="16sp"
-        android:textStyle="bold"
-        android:textAlignment="center"/>
-
-
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
