--- a/app/src/main/res/layout/fragment_song_playing.xml
+++ b/app/src/main/res/layout/fragment_song_playing.xml
@@ -23,10 +23,10 @@
                 app:av_bubblesRandomizeSizes="true"
                 app:av_wavesHeight="60dp"
                 app:av_wavesFooterHeight="170dp"
-                app:av_wavesCount="50"
+                app:av_wavesCount="600"
                 app:av_layersCount="4"
                 app:av_wavesColors="@array/rainbow"
-                app:av_backgroundColor="#00032a"
+                app:av_backgroundColor="#51F7F1F1"
                 app:av_bubblesPerLayer="16"
                 />
 
@@ -43,7 +43,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_weight="1"
-        android:background="#9d2a58"
+        android:background="#141414"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
