--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00032a</color>
-    <color name="colorPrimaryDark">#00042a</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="first">#270d36</color>
-    <color name="second">#4e1741</color>
-    <color name="third">#74204d</color>
-    <color name="fourth">#9d2a58</color>
+    <color name="colorPrimary">#42425C</color>
+    <color name="colorPrimaryDark">#D7D7DB</color>
+    <color name="colorAccent">#423A3B</color>
+    <color name="first">#7F24B3</color>
+    <color name="second">#6C886C</color>
+    <color name="third">#A0858F</color>
+    <color name="fourth">#64454B</color>
     <array name="rainbow">
         <item>@color/first</item>
         <item>@color/second</item>
